[metadata]
name = sharpener
version = 1.0.0
description = "UnionTech Team's Quick Patch Tool."
long description = README.rst
author = "UnionTech"
author_email = 'uos@uniontech.com'
project_urls =
    Source Code = https://gitee.com/ustack/sharpener
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[bdist_wheel]
universal = 1

[build_sphinx]
project = sharpener
version = 1.0.0
release = 1.0.0
source-dir = docs

[flake8]
exclude = docs

[files]
packages = sharpener

[entry_points]
console_scripts =
    uos-tool = sharpener.cmd.tool:main